# sciffr

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.go  buildit  go.mod  go.sum
backend/: backend.go  backend_test.go
backend/cryptservice/: encryption.go  encryption_test.go
backend/db/: db.go
deployment/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-test.yaml  values.yaml
deployment/templates/: deployment.yaml  service.yaml
frontend/: frontend.go
scripts/: buildit  deploy-dev  deploy-prod  deploy-test  install-dev  install-prod  install-test  release  release_new_version
sql/: create.sql
src/: cipher.rs  config.rs  file.rs  main.rs
