[package]
name = "sciffr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.9"
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.0"
